--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://tking42.github.io/weatherApi",
+  "homepage": "http://tking42.github.io/weatherApp",
   "name": "weatherukapp",
   "private": true,
   "version": "0.0.0",
