--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "homepage": "https://tking42.github.io/weatherApp",
+  "homepage": "http://tking42.github.io/weatherApp",
   "name": "weatherukapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
