--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "homepage": "https://tking42.github.io/weatherApp",
+  "homepage": "http://tking42.github.io/weatherApp",
   "name": "weatherukapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
